--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,17 @@
 			<artifactId>hadoop-client</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apdplat</groupId>
+			<artifactId>word</artifactId>
+			<version>1.2</version>
 		</dependency>
 
 		<!--<dependency>-->
@@ -26,11 +33,11 @@
 			<!--<artifactId>nkv</artifactId>-->
 			<!--<version>2.1.0</version>-->
 		<!--</dependency>-->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-nop</artifactId>
-			<version>1.5.6</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.slf4j</groupId>-->
+			<!--<artifactId>slf4j-nop</artifactId>-->
+			<!--<version>1.5.6</version>-->
+		<!--</dependency>-->
 
 		<!--<dependency>-->
 			<!--<groupId>junit</groupId>-->
@@ -81,14 +88,7 @@
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
+			
 
 			<plugin>
 				<groupId>org.scala-tools</groupId>
